--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "coffeescript-api-challenge",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "coffee --compile --output dist/ index.coffee",
+    "start": "node dist/index.js",
+    "watch": "coffee --watch --compile --output dist/ index.coffee"
   },
   "keywords": [],
   "author": "",
