--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coffeescript-api-challenge",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "coffee --compile --output dist/ index.coffee",
     "start": "node dist/index.js",
@@ -13,5 +14,9 @@
   "description": "",
   "devDependencies": {
     "coffeescript": "^2.7.0"
+  },
+  "dependencies": {
+    "@fastify/multipart": "^9.0.1",
+    "fastify": "^5.1.0"
   }
 }
